# FullDuplexVoiceAI

./: .env.example  .gitignore  README.md  full-duplex-voice-ai-design-doc.md  ideas.txt  pyproject.toml
client/: client.js  index.html
server/: config.py  connection.py  main.py  metrics.py  session.py  signaling.py  tracks.py
server/audio/: buffer.py  chunking.py  processing.py  resampling.py
server/llm/: chunker.py  client.py  conversation.py  prompts.py  test_chat.py
server/pipeline/: bargein.py  listening.py  runner.py
server/stt/: transcriber.py
server/tts/: synthesizer.py
server/vad/: detector.py  model.py
tests/: test_bargein.py  test_buffer.py  test_chunker.py  test_chunking.py  test_conversation.py  test_metrics.py  test_resampling.py  test_session.py  test_tts_synthesizer.py  test_vad_detector.py
